# rdhm-hrapxmrg

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/: rio_grande_headwaters.yaml
docs/: ASCTOXMRG_COMPATIBILITY_TEST.md  PROJECT_RULES.md
hrapxmrg/: __init__.py  cli.py  config.py  hrap_utils.py  units.py  validator.py  variable_registry.py  xmrg_io.py
hrapxmrg/readers/: __init__.py  hrap_ascii.py
src/hrapxmrg/: __init__.py  ascii_grid.py  ascii_writer.py  batch.py  cli.py  domain.py  filenames.py  hrap.py  netcdf.py  netcdf_batch.py  pipeline.py  prism.py  prism_batch.py  regrid.py  temporal.py  units.py  validate.py  variables.py  xmrg.py
tests/: test_ascii_grid.py  test_batch.py  test_cli.py  test_cli_import.py  test_domain.py  test_filenames.py  test_hrap_ascii_reader.py  test_netcdf.py  test_netcdf_batch.py  test_prism.py  test_prism_batch.py  test_raster_to_xmrg_pipeline.py  test_regrid.py  test_temporal.py  test_units.py  test_validator.py  test_xmrg_io.py  test_xmrg_roundtrip.py
