[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrapxmrg"
version = "0.1.0"
description = "HRAP/XMRG reader-writer and RDHM forcing preprocessor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Afshin Shayeghi Moghanlou"}
]
license = {text = "MIT"}
dependencies = [
  "numpy>=1.24",
  "pyyaml>=6.0"
]

[project.optional-dependencies]
geo = [
  "rasterio>=1.3",
  "pyproj>=3.5",
  "xarray>=2023.1",
  "netCDF4>=1.6"
]
dev = [
  "pytest>=7.0",
  "ruff>=0.4",
  "black>=24.0",
  "mypy>=1.8"
]

[project.scripts]
hrapxmrg = "hrapxmrg.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"
